# mipt_4s

./: .gitignore  README.md
QtSample/QtSample/: .clang-format  mainwnd.cpp  mainwnd.h  mainwnd.ui
Templatonks/: CMakeLists.txt  allocator.h  array.h  dot.h  function.h  main.cpp  storage.h  string.h  test.cpp  test.h
Testbed/: Testbed.sln
Testbed/AGF/include/AGF/: application.h
Testbed/AGF/include/AGF/impl/: llgui_gdiplus_txlib.h
Testbed/AGF/include/AGF/widgets/: label.h
Testbed/AGF/src/: application.cpp  llgui_gdiplus_txlib.cpp
Testbed/AGF/src/widgets/: label.cpp
Testbed/Sorts/: Sorts.vcxproj  Sorts.vcxproj.filters  app.cpp  app.h  bars.cpp  bars.h  plot.cpp  plot.h  sort_provider.cpp  sort_provider.h  subapp_bars.cpp  subapp_bars.h  subapp_counter.cpp  subapp_counter.h  subapp_plot.cpp  subapp_plot.h  tracer.cpp  tracer.h
TracerGCC/: .gitignore  CMakeLists.txt  README.md  format.dsl.h  format.h  general.cpp  general.h  helpers.cpp  helpers.h  main.cpp  named_arg.cpp  named_arg.h  rvalues_testbed.cpp  rvalues_testbed.h  stdfs.h  stdsl.h  trace.cpp  trace.h  trace_entry.cpp  trace_entry.h  tracer.cpp  tracer.h
TracerGCC/examples/: log_bubble.html  log_simple.html  main_bubble.cpp  main_simple.cpp
TracerGCC/tpl/: label_info.tpl  label_legend.tpl  label_unary.tpl
TracerGCC/visualizers/: dot.cpp  dot.h  html.cpp  html.h  visualizer.cpp  visualizer.h
